fix: align status indicator table to grid

--- a/src/components/StatusIndicatorTable/StatusIndicator.module.scss
+++ b/src/components/StatusIndicatorTable/StatusIndicator.module.scss
@@ -6,6 +6,7 @@
 .iconGroup {
   padding: 1rem;
   display: flex;
+  width: 100%;
 
   @include carbon--breakpoint('lg') {
     width: 80px;
@@ -90,9 +91,6 @@
 @include carbon--breakpoint-between('sm', 'lg') {
   .statusIndicatorTableWrapper {
     overflow: scroll;
-  }
-  .iconGroup {
-    width: 100%;
   }
   .iconGroup.isDark {
     display: none;
